# puppet

./: .gitignore  .metadata  README.md  analysis_options.yaml  build.sh  pubspec.yaml
.github/workflows/: deploy.yml
assets/: config.json  config_linux.json  config_windows.json
doc/: astro.config.mjs  package-lock.json  package.json
integration_test/: simple_test.dart
lib/: config_providers.dart  error_page.dart  list.dart  main.dart  providers.dart  wheel.dart
lib/config/: calculate_window_position.dart  config.dart  config_defaults.dart  config_repository.dart  path_manager.dart  theme.dart
lib/plugin/: marketplace.dart  plugin_factory.dart  plugin_model.dart
lib/settings/: gradient_picker.dart  marketplace_detail.dart  menu_detail_pane.dart  menu_item_element.dart  menus_pane.dart  plugins_pane.dart  settings_element.dart  settings_page.dart  theme_detail_pane.dart  themes_pane.dart
lib/widgets/: item_icon.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: Flutter-Debug.xcconfig  GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  plugin_manager.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_puppet.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_puppet.podspec
shaders/: wheel.frag
windows/: CMakeLists.txt
(+21 files in other folders)
